Prevent text editing tap zoom on mobile, etc

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -509,5 +509,9 @@ div pre {
   background: #f5f5f5;
 }
 
+.note-editor .note-editing-area .note-editable {
+  font-size: 16px;
+}
+
 /* prevent navbar from collapsing */
 /* @import "non-responsive"; */
